src/test/ui/simd/issue-94382.stderr
error: module has missing stability attribute
  --> $DIR/issue-94382.rs:1:1
   |
LL | / #![feature(platform_intrinsics)]
LL | | #![feature(staged_api)]
LL | |
LL | | struct U16x2(u16, u16);
...  |
LL | |     const Y0: i8 = unsafe { simd_extract(V, 0) };  
LL | | }
   | |_^

error: any use of this value will cause an error
  --> $DIR/issue-94382.rs:14:29
   |
LL |     const Y0: i8 = unsafe { simd_extract(V, 0) };  
   |     ------------------------^^^^^^^^^^^^^^^^^^---
   |                             |
   |                             aborted execution: type `U16x2` is not `#[repr(simd)]`
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to 2 previous errors

